@@ -4,11 +4,13 @@ import java.util.List;
 public class Skriv {
     static List<String> inputs = new ArrayList<>();
 
-
-
-
-    public static void addToList(String input) {
-        inputs.add(input);
+    public static boolean addToList(String input) {
+        if (input.equals("stop")) {
+            return false;
+        } else {
+            inputs.add(input.replaceAll("\\s+", "").trim());
+            return true;
+        }
     }
     public static void printList(){
         System.out.println(String.join(" ", inputs));
@@ -27,13 +29,17 @@ public class Skriv {
         return totalChars;
     }
 
-    public static void printLongestWord() {
-        String longestWord = inputs.getFirst();
+    public static String printLongestWord() {
+        if (inputs.size() > 1 ){
+        String longestWord = inputs.get(0);
         for (String input : inputs) {
             if (input.length() > longestWord.length()) {
                 longestWord = input;
             }
         }
         System.out.println("Längsta ordet: " + longestWord);
+        return longestWord;
+    }
+        return "Du har inte matat in något.";
     }
 }
